fix file structure to make it more readable

--- a/src/components/ServicesDetails/SchoolServicesCard.module.css
+++ b/src/components/ServicesDetails/SchoolServicesCard.module.css
@@ -1,8 +1,9 @@
 .serviceContainer {
   height: auto;
   width: 350px;
-  border-radius: 5px;
+  border-radius: 15px;
   background: #fffffb;
+  /* background: linear-gradient(45deg, white, #b4ffff, #b4ffff, white); */
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   margin: 0 auto;
   margin-top: 70px;
@@ -19,7 +20,8 @@
   margin: 0;
   height: 100px;
   width: 100px;
-  background: url('https://images.unsplash.com/photo-1504933350103-e840ede978d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=564&q=80');
+  /* background: url('https://images.unsplash.com/photo-1504933350103-e840ede978d4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=564&q=80'); */
+  background: url("https://i.imgur.com/fTHPmcy.jpg");
   background-size: cover;
   background-position: center;
   top: -25px;
@@ -71,15 +73,16 @@
   width: 60%;
   height: 50px;
   font-size: 1.5rem;
-  margin: 30px 10% 0 10%;
+  /* margin: 30px 10% 0 10%; */
   border: none;
   box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
   border-radius: 5px;
-  background: linear-gradient(45deg, #ff6b6c, #ffc145, #ffc145, #ff6b6c);
+  /* background: linear-gradient(45deg, #ff6b6c, #ffc145, #ffc145, #ff6b6c); */
+  background: linear-gradient(45deg, #4cb8c4, #3cd3ad, #3cd3ad, #4cb8c4);
   background-size: 300% 300%;
   outline: none;
   transition: all 200ms ease-in-out;
-  margin: 20px auto 30px;
+  /* margin: 20px auto 30px; */
 }
 
 .serviceContainer .cardBtn:hover {
@@ -103,13 +106,14 @@
   font-weight: 900;
   width: 100%;
   bottom: 0;
-  height: 30px;
+  height: 40px;
   margin: auto 0 0 0;
   margin-bottom: auto;
   flex-shrink: 0;
   box-sizing: border-box;
   margin-left: 0;
   padding: 0 20px;
+  margin-top: 10px;
 }
 
 .button30 {
@@ -186,3 +190,5 @@
 .bookMe {
   color: var(--secondary-text-color);
 }
+
+
