--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -9,7 +9,8 @@
   width: 50vw;
   max-width: 250px;
   height: calc(100vh - 60px); 
-  background-image: url(https://media.istockphoto.com/id/1218737747/vector/learning-online-e-learning-video-call-chat-with-class-distance-education.jpg?s=612x612&w=0&k=20&c=fFFwc3CTP4XtvmruZLiK8EzAbzvAxJL_kw5BsA7z7w8=);
+  /* background-image: url(https://media.istockphoto.com/id/1218737747/vector/learning-online-e-learning-video-call-chat-with-class-distance-education.jpg?s=612x612&w=0&k=20&c=fFFwc3CTP4XtvmruZLiK8EzAbzvAxJL_kw5BsA7z7w8=); */
+  background-color: #777;
   color: #fff;
   position: fixed;
   top: 60px; 
