--- a/src/pages/SchoolList/SchoolList.module.css
+++ b/src/pages/SchoolList/SchoolList.module.css
@@ -100,3 +100,44 @@
   color: var(--secondary-text-color);
   padding: .5rem;
 }
+
+.appbanner {
+  background: url("https://i.imgur.com/8AqohIZ.jpg") center/cover no-repeat; /* Adjust 'background.jpg' to your image path */
+  height: 400px; /* Set the height of your banner */
+  color: #ffffff; /* Text color */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.bannercontent {
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background for better readability */
+  padding: 20px;
+  border-radius: 10px;
+}
+
+h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.bannerBtn {
+  background-color: #3498db;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.bannerBtn:hover {
+  background-color: #2980b9;
+}
